--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         }
 
         // 2. CONFIGURATION
-        const APPS_SCRIPT_URL = "YOUR_APPS_SCRIPT_WEB_APP_URL"; // REPLACE THIS!
+        const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzFxn2FaoUuljaNnSMRlEPeCMTCAC2fFqSR7ddjJ_aJpog8oDngms20DVHhm5ZjU0otjQ/exec"; // REPLACE THIS!
 
         // 3. DOM ELEMENTS
         const guestNameEl = document.getElementById('guestName');
