--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <script>
         // 1. CONFIGURATION - REPLACE WITH YOUR WEB APP URL
-        const APPS_SCRIPT_URL = "YOUR_APPS_SCRIPT_WEB_APP_URL";
+        const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzFxn2FaoUuljaNnSMRlEPeCMTCAC2fFqSR7ddjJ_aJpog8oDngms20DVHhm5ZjU0otjQ/exec";
 
         // 2. INITIALIZATION
         if ('serviceWorker' in navigator) { navigator.serviceWorker.register('sw.js'); }
